--- a/evolution/evolution.vcxproj.filters
+++ b/evolution/evolution.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Simulation.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Virus.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Simulation.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Virus.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
