--- a/evolution/evolution.vcxproj
+++ b/evolution/evolution.vcxproj
@@ -133,6 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Field.cpp" />
+    <ClCompile Include="Hospital.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="Simulation.cpp" />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Field.h" />
+    <ClInclude Include="Hospital.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="Simulation.h" />
     <ClInclude Include="Virus.h" />
