--- a/evolution/evolution.vcxproj.filters
+++ b/evolution/evolution.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Virus.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Hospital.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Virus.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Hospital.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
